--- a/css/main.css
+++ b/css/main.css
@@ -1,5 +1,96 @@
+/* IMPORT FONT GOOGLE */
+@import url('https://fonts.googleapis.com/css2?family=Roboto&display=swap');
+
+/* VARIAVEIS DE AMBIENTE */
+:root {
+    --gray-primary: #e9e9e9;
+    --gray-secondary: #c7c7c7;
+}
+
 /* RESETA TODOS OS ELEMENTOS */
 * {
-    margin: 0;
-    padding: 0;
+    margin: 0px;
+    padding: 0px;
+    cursor: default;
+}
+a {
+    cursor: pointer;
+}
+
+/* BODY */
+body {
+    width: 100vw;
+    height: 100vh;
+}
+
+/* LISTA SOBRE */
+ul {
+    list-style: none;
+    padding: 0px !important;
+    margin: 0px !important;
+}
+ul:nth-child(1) > li {
+    padding: 0px;
+    margin: 0px;
+}
+
+.col:nth-child(2n+2) > ul > li > label {
+    font-family: 'Roboto', sans-serif;
+    font-weight: 900;
+    font-size: 3vw;
+    color: green;
+} /* LISTA A DIREITA COM MAIS DETALHE */
+.col:nth-child(2n+2) > ul > li:nth-child(3n) {
+    display: flex;
+    justify-content: space-between;
+} /* SEGUNDO ELEMENTO DO BOX DETALHADO */
+.col:nth-child(2n+2) > ul > li:nth-child(2n) {
+    margin: 10px 0 10px 10px;
+    padding: 0 0 0 10px;
+    border-left: 2px solid green;
+} /* TERCEIRO ITEM DO BOX DETALHADO */
+
+.col:nth-child(2n+1) > ul > li > label {
+    font-family: 'Roboto', sans-serif;
+    font-weight: 900;
+    color: red;
+} /* LISTA A ESQUERDA COM DADOS PESSOAIS */
+.container > .row > .col:nth-child(2n+2) > div > div:nth-child(2n+1) {
+    background: var(--gray-primary);
+    padding: 10px;
+} /* CONTAINER ESQUERDO */
+.container > .row > .col:nth-child(2n+2) > div > div:nth-child(1) {
+    padding: 10px;
+    border-top: 2px solid gray;
+} /* PRIMEIRO ITEM DADOS PESSOAIS ESQUERDO */
+.container > .row > .col:nth-child(2n+2) > div > div:nth-child(2n+2) {
+    padding: 10px;
+    border-top: 2px solid gray;
+} /* CONTAINER LINHA MULTIPLO DE 2 */
+
+/* ROW IMAGEM */
+.container > .row > .col:nth-child(1) {
+    padding: 0px;
+} /* BOX IMAGEM + NOME */
+.container > .row > .col:nth-child(1) > div:nth-child(1) {
+    display: flex;
+    align-items: center;
+    margin: 20px 0px 20px 0px;
+    width: 100%;
+    background: var(--gray-secondary);
+    justify-content: flex-start;
+} /* IMAGEM + NOME*/
+.container > .row > .col:nth-child(1) > div:nth-child(1) > div:nth-child(2) > h1 {
+    font-family: 'Roboto', sans-serif;
+    font-weight: 900;
+    font-size: calc(3vw - 0.1vw) ;
+} /* NOME > FONT */
+.container > .row > .col:nth-child(1) > div:nth-child(1) > div:nth-child(2) {
+    margin: 0 0 0 calc(20px + 4vw);
+} /* NOME */
+
+.container > .row > .col {
+    display: flex;
+    align-items: center;
+    justify-content: flex-start;
 }
