--- a/css/main.css
+++ b/css/main.css
@@ -9,13 +9,14 @@
 
     --gray-primary: #e9e9e9;
     --gray-secondary: #fbfbfb;
-    --gray-option: #d4e0e3;
+    --gray-option: #e0e0de;
 
     --black-primary: #495057;
     --black-secondary: #bbc2c9;
 
     --green-primary: #9eeaf9;
     --green-secondary: #dcf2f7;
+    --grenn-option: #00a884;
     --blue-primary: #0a58ca33;
 
     --yellow-primary: #ffc107;
@@ -43,6 +44,7 @@ a {
 /* BODY */
 body {
     height: 100vh;
+    background: var(--gray-option) !important;
 }
 
 /* LISTA SOBRE */
@@ -64,6 +66,15 @@ ul:nth-child(1) > li {
     outline: 0;
     border-bottom: 3px solid var(--gray-primary);
     box-shadow: 0 0 0 0.25rem rgb(13 110 253 / 1%) !important;
+}
+
+/* DIV STYLE FUNDO */
+.divDownPage:nth-child(1) {
+    z-index: -100;
+    position: absolute;
+    width: 100%;
+    height: 40vh;
+    background: var(--grenn-option);
 }
 
 /* ROW IMAGEM */
@@ -91,6 +102,9 @@ ul:nth-child(1) > li {
     margin: 0 0 0 calc(20px + 4vw);
 } /* NOME */
 
+.container > .row > .col:nth-child(2n+2) > div > div:nth-child(2n+2) {
+    background: white;
+} /* CONTAINER DIREITO */
 .col:nth-child(2n+2) > ul > li > label {
     font-family: 'Roboto', sans-serif;
     font-weight: 900;
@@ -125,7 +139,6 @@ ul:nth-child(1) > li {
 .col:nth-child(2n+1) > ul > li > label {
     font-family: 'Roboto', sans-serif;
     font-weight: 500;
-    margin: 10px 0 0 0;
     padding: 5px;
     border-radius: 10px 10px 0 0;
     color: var(--black-primary);
@@ -136,6 +149,7 @@ ul:nth-child(1) > li {
     background: var(--blue-primary);
     border-radius: 0 10px 10px 10px;
     border-bottom: 3px solid var(--gray-primary);
+    margin: 0 0 10px 0;
 } /* LISTA A ESQUERDA COM DADOS PESSOAIS [LI -> CHILD] */
 .col:nth-child(2n+1) > ul > li:nth-child(2n+2) > div {
     display: flex;
@@ -146,6 +160,7 @@ ul:nth-child(1) > li {
 } /* ITEM TEXTO DIREITA COM DADOS PESSOAIS */
 .col:nth-child(2n) > ul > ul:nth-child(3n+5) {
     margin: 0 0 0 0 !important;
+    min-height: 500px;
 } /* LISTA APTIDAO */
 .col:nth-child(2n) > ul > ul:nth-child(3n+5) > ol {
     padding: 10px !important;
@@ -153,10 +168,10 @@ ul:nth-child(1) > li {
     justify-content: space-between;
     background: var(--gray-secondary);
 } /* ELEMENTOS LISTA APTIDAO */
-.col:nth-child(2n) > ul > ul:nth-child(3n+5) > ol:nth-child(2n) {
+.col:nth-child(2n) > ul > ul:nth-child(3n+5) > ol:nth-child(2n):not(.collapse) {
     background: var(--gray-option);
     border-bottom: 4px solid var(--black-secondary);
-}
+} /* ELEMENTO LISTA APTIDAO 2° COLOR */
 .container > .row > .col:nth-child(2n+2) > div > div:nth-child(2n+1) {
     background: var(--gray-secondary);
     padding: 10px;
